# dotman-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  cli.go  config.go  config_test.go  fs.go  fs_test.go  go.mod  main.go  readme.md  test.toml
src/: cli.rs  config_file.rs  config_mapping.rs  dependency_definition.rs  file_mapping.rs  main.rs  mapping_definitions.rs  os_type.rs
testRepo/: sampleconfig.toml
testRepo/dotfiles/alacritty/: alacritty.yml
testRepo/dotfiles/dotfiles/nvim/: init.lua
testRepo/dotfiles/dotfiles/nvim/after/plugin/: colors.lua  dadbod.lua  lsp.lua  nvim-tree.lua  treesitter.lua
testRepo/dotfiles/dotfiles/nvim/lua/kadencartwright/: remap.lua
testRepo/dotfiles/fuzzel/: fuzzel.ini
testRepo/dotfiles/hyprland/: hyprland.conf  hyprpaper.conf
testRepo/dotfiles/nvim/after/ftplugin/: javascript.lua  typescript.lua
testRepo/dotfiles/nvim/after/plugin/: lsp.lua  nvim-autopairs.lua  nvim-dap.lua  treesitter.lua
testRepo/dotfiles/nvim/lua/kadencartwright/: init.lua  packer.lua  remap.lua  set.lua
testRepo/dotfiles/nvim/plugin/: packer_compiled.lua
testRepo/dotfiles/starship/: starship.toml
testRepo/dotfiles/sway/: config
testRepo/dotfiles/waybar/: config  style.css
testRepo/dotfiles/zsh/: .zcompdump  .zshrc
testRepo/dotfiles/zsh/bootstrap/: bootstrap.sh  ensure_installed.sh  install_silent.sh  starship.sh  zsh-autosuggestions.sh
